# lawyer_agent

./: .gitignore  Makefile  README.md  pyproject.toml
agent/: .dockerignore  Dockerfile  README.md  config.py  debug_upload.py  main.py  retry_policy.py  security.py  setup_cors.py
agent/api/: auxiliars.py  gcs_utils.py  main.py  schemas.py  test.ipynb
agent/database/: bq_utils.py  config.py  schemas.py
agent/database/tables/: bq_base_table.py  conversations.py  users.py
agent/tools/bigquery/: README.md  __init__.py  bq_utils.py  config.py  schemas.py  tool_functions.py
agent/tools/url_scraper/: __init__.py  schemas.py  tool_functions.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/Auth/: ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/components/Chat/: ChartsDisplay.css  ChartsDisplay.tsx  ChatWindow.tsx  EChartsDisplay.tsx  InputArea.css  InputArea.tsx  MessageBubble.css  MessageBubble.tsx  MessageList.css  MessageList.tsx  Sidebar.css  Sidebar.tsx
frontend/src/components/Layout/: MainLayout.css  MainLayout.tsx
frontend/src/components/Login/: LoginPage.css  LoginPage.tsx
frontend/src/components/UI/: Button.css  Button.tsx
frontend/src/styles/: global.css  variables.css
frontend/src/types/: chat.ts
pipelines/: README.md
pipelines/dof/: README.md  bq_utils.py  config.py  main.py  scraper.py
pipelines/federal_laws/: README.md  config.py  gcs_utils.py  main.py  scraper.py
