[project]
name = "lawyer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
local_dev = [
    "ipykernel>=7.1.0",
    "requests>=2.32.5",
    "pre-commit>=4.5.1",
]
agent = [
    "google-cloud-bigquery>=3.31.0",
    "google-cloud-storage>=3.1.0",
    "google-cloud-modelarmor>=0.3.0",
    "fastapi>=0.118.2",
    "loguru>=0.7.3",
    "pydantic-ai>=1.31.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
    "datetime>=6.0",
]
dof_pipeline = [
    "bs4>=0.0.2",
    "requests>=2.32.5",
    "pydantic-settings>=2.7.0",
    "google-cloud-bigquery>=3.13.0",
    "loguru>=0.7.2",
    "functions-framework>=3.0.0",
]
